--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/cli": "^15.1.2",
     "@react-navigation/bottom-tabs": "^7.0.0",
+    "@react-navigation/drawer": "^7.0.4",
     "@react-navigation/native": "^7.0.0",
     "axios": "^1.7.7",
     "expo": "^52.0.6",
@@ -35,6 +36,7 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.2",
     "expo-web-browser": "~14.0.1",
+    "jwt-decode": "^4.0.0",
     "metro": "^0.81.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
